// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleMessage 1`] = `
Array [
  Array [
    "{\\"channel\\":\\"sequence\\",\\"status\\":\\"ok\\",\\"method\\":\\"ZRX-WETH\\",\\"sequence\\":124}",
  ],
]
`;

exports[`handleMessage 2`] = `
Array [
  Array [
    "sequence|ZRX-WETH",
    "124",
  ],
]
`;

exports[`handleMessage 3`] = `
Object {
  "ZRX-WETH": 124,
}
`;

exports[`handleMessage invalid channel 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"channel\\",\\"method\\":\\"pair\\"}",
  ],
]
`;

exports[`handleMessage invalid pair 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"sequence\\",\\"method\\":\\"pair\\"}",
  ],
]
`;

exports[`handleMessage no channel 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"\\",\\"method\\":\\"method\\"}",
  ],
]
`;

exports[`handleMessage no method 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"channel\\",\\"method\\":\\"\\"}",
  ],
]
`;
